tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_error_path_with_cycles.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--path"
    - alpha
    - beta
    - "--cycles"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the argument '--path <SOURCE> <TARGET>' cannot be used with '--cycles [<CYCLES>]'

Usage: crawk deps --path <SOURCE> <TARGET>

For more information, try '--help'.
