tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_depth_1_with_nested_modules_for_modules_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "--path"
    - app
    - "nesting::level1::level2::level3"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
app -> nesting

----- stderr -----
