tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_dot_no_path_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - leaf
    - a
    - "-f"
    - dot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
No path from leaf to a.
