tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_error_unknown_source_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - nonexistent
    - leaf
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module not found: nonexistent
