tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_error_unknown_target_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - lib
    - nonexistent
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module not found: nonexistent
